tests/rosetta/out/Fortran/check-machin-like-formulas.error
parse: error[P999]: /workspace/mochi/tests/rosetta/x/Mochi/check-machin-like-formulas.mochi:9:31: unexpected token ":-" (expected ":" Expr)
  --> /workspace/mochi/tests/rosetta/x/Mochi/check-machin-like-formulas.mochi:9:31

  9 |   [{"a":4, "n":1, "d":5}, {"a":-1, "n":1, "d":239}],
    |                               ^

help:
  Parse error occurred. Check syntax near this location.